02_aws_fargate/fargate/cloudformation/aaa-generated.yaml
AWSTemplateFormatVersion: "2010-09-09"
Metadata:
    Generator: "former2"
Description: ""
Resources:
    BatchComputeEnvironment:
        Type: "AWS::Batch::ComputeEnvironment"
        Properties:
            ComputeEnvironmentName: "fargate-20221104233550573400000003"
            Type: "MANAGED"
            State: "ENABLED"
            ServiceRole: !GetAtt IAMRole3.Arn
            ComputeResources: 
                Type: "FARGATE"
                MaxvCpus: 8
                Subnets: 
                  - "subnet-0a7ccdf40ebb72b5e"
                  - "subnet-0f924d5623687fff8"
                  - "subnet-033214d4f26fbf6cc"
                SecurityGroupIds: 
                  - !Ref EC2SecurityGroup
                  - !Ref EC2SecurityGroup2
                Tags: {}

    BatchComputeEnvironment2:
        Type: "AWS::Batch::ComputeEnvironment"
        Properties:
            ComputeEnvironmentName: "BatchOnDemand"
            Type: "MANAGED"
            State: "ENABLED"
            ServiceRole: !Sub "arn:aws:iam::${AWS::AccountId}:role/TestEtlBatchCompute"
            ComputeResources: 
                Type: "FARGATE"
                MaxvCpus: 16
                Subnets: 
                  - "subnet-0b49acce78cf57505"
                  - "subnet-0efcf45df9f524ac4"
                SecurityGroupIds: 
                  - !Ref EC2SecurityGroup3
                Tags: {}

    BatchComputeEnvironment3:
        Type: "AWS::Batch::ComputeEnvironment"
        Properties:
            ComputeEnvironmentName: "BatchSpot"
            Type: "MANAGED"
            State: "ENABLED"
            ServiceRole: !Sub "arn:aws:iam::${AWS::AccountId}:role/TestEtlBatchCompute"
            ComputeResources: 
                Type: "FARGATE"
                MaxvCpus: 16
                Subnets: 
                  - "subnet-0b49acce78cf57505"
                  - "subnet-0efcf45df9f524ac4"
                SecurityGroupIds: 
                  - !Ref EC2SecurityGroup3
                Tags: {}

    BatchComputeEnvironment4:
        Type: "AWS::Batch::ComputeEnvironment"
        Properties:
            ComputeEnvironmentName: "fargate_spot-20221104233550574900000004"
            Type: "MANAGED"
            State: "ENABLED"
            ServiceRole: !GetAtt IAMRole3.Arn
            ComputeResources: 
                Type: "FARGATE_SPOT"
                MaxvCpus: 8
                Subnets: 
                  - "subnet-0a7ccdf40ebb72b5e"
                  - "subnet-0f924d5623687fff8"
                  - "subnet-033214d4f26fbf6cc"
                SecurityGroupIds: 
                  - !Ref EC2SecurityGroup
                  - !Ref EC2SecurityGroup2
                Tags: {}

    BatchJobQueue:
        Type: "AWS::Batch::JobQueue"
        Properties:
            ComputeEnvironmentOrder: 
              - 
                ComputeEnvironment: !Sub "arn:aws:batch:${AWS::Region}:${AWS::AccountId}:compute-environment/fargate-20221104233550573400000003"
                Order: 0
              - 
                ComputeEnvironment: !Sub "arn:aws:batch:${AWS::Region}:${AWS::AccountId}:compute-environment/fargate_spot-20221104233550574900000004"
                Order: 1
            Priority: 99
            State: "ENABLED"
            JobQueueName: "HighPriorityFargate_2"

    BatchJobQueue2:
        Type: "AWS::Batch::JobQueue"
        Properties:
            ComputeEnvironmentOrder: 
              - 
                ComputeEnvironment: !Sub "arn:aws:batch:${AWS::Region}:${AWS::AccountId}:compute-environment/fargate-20221104233550573400000003"
                Order: 0
              - 
                ComputeEnvironment: !Sub "arn:aws:batch:${AWS::Region}:${AWS::AccountId}:compute-environment/fargate_spot-20221104233550574900000004"
                Order: 1
            Priority: 1
            State: "ENABLED"
            JobQueueName: "LowPriorityFargate_2"

    BatchSchedulingPolicy:
        Type: "AWS::Batch::SchedulingPolicy"
        Properties:
            Name: "HighPriorityFargate_2"
            FairsharePolicy: 
                ComputeReservation: 1
                ShareDecaySeconds: 3600
                ShareDistribution: 
                  - 
                    ShareIdentifier: "A2"
                    WeightFactor: 0.2
                  - 
                    ShareIdentifier: "A1*"
                    WeightFactor: 0.1
            Tags: 
              - 
                Key: "JobQueue"
                Value: "High priority job queue"
              - 
                Key: "Owner"
                Value: "etl"
              - 
                Key: "Purpose"
                Value: "etl"

    BatchSchedulingPolicy2:
        Type: "AWS::Batch::SchedulingPolicy"
        Properties:
            Name: "LowPriorityFargate_2"
            FairsharePolicy: 
                ComputeReservation: 0
                ShareDecaySeconds: 0
            Tags: 
              - 
                Key: "JobQueue"
                Value: "Low priority job queue"
              - 
                Key: "Owner"
                Value: "etl"
              - 
                Key: "Purpose"
                Value: "etl"

    BatchJobDefinition:
        Type: "AWS::Batch::JobDefinition"
        Properties:
            JobDefinitionName: "enc-dec-fargate"
            Type: "container"
            Parameters: {}
            RetryStrategy: 
                Attempts: 3
                EvaluateOnExit: 
                  - 
                    Action: "exit"
                    OnExitCode: "0"
                  - 
                    Action: "retry"
                    OnExitCode: "1"
            Timeout: 
                AttemptDurationSeconds: 60
            ContainerProperties: 
                MountPoints: 
                  - 
                    ReadOnly: false
                    SourceVolume: "efs"
                    ContainerPath: "/mnt/efs"
                Volumes: 
                  - 
                    Name: "efs"
                Command: 
                  - "ls"
                  - "-la;"
                JobRoleArn: !GetAtt IAMRole2.Arn
                Image: !Sub "${AWS::AccountId}.dkr.ecr.${AWS::Region}.amazonaws.com/encrypt-decrypt-s3-docker-image:latest"
                ExecutionRoleArn: !GetAtt IAMRole2.Arn
                LogConfiguration: 
                    LogDriver: "awslogs"
                    Options: 
                        awslogs-group: "/aws/batch/enc-dec-fargate"
                        awslogs-region: !Ref AWS::Region
                        awslogs-stream-prefix: "enc-dec-fargate"

    EFSFileSystem:
        Type: "AWS::EFS::FileSystem"
        Properties:
            PerformanceMode: "generalPurpose"
            Encrypted: true
            KmsKeyId: !Sub "arn:aws:kms:${AWS::Region}:${AWS::AccountId}:key/cedca054-8d47-46b4-80bc-913da7ab7446"
            ThroughputMode: "bursting"
            FileSystemTags: 
              - 
                Key: "Name"
                Value: "enc-dec-fargate-efs"
              - 
                Key: "Owner"
                Value: "etl"
              - 
                Key: "Purpose"
                Value: "etl"

    EFSAccessPoint:
        Type: "AWS::EFS::AccessPoint"
        Properties:
            FileSystemId: !Ref EFSFileSystem
            ClientToken: "AFA99F4E-C9F8-4CF5-AA1E-2664C49EF949"
            RootDirectory: 
                Path: "/"

    IAMRole:
        Type: "AWS::IAM::Role"
        Properties:
            Path: "/batch/"
            RoleName: "enc-dec-fargate-ecs-instance-new-20221104232638305900000001"
            AssumeRolePolicyDocument: "{\"Version\":\"2012-10-17\",\"Statement\":[{\"Sid\":\"ECSAssumeRole\",\"Effect\":\"Allow\",\"Principal\":{\"Service\":\"ec2.amazonaws.com\"},\"Action\":\"sts:AssumeRole\"}]}"
            MaxSessionDuration: 3600
            ManagedPolicyArns: 
              - "arn:aws:iam::aws:policy/service-role/AmazonEC2ContainerServiceforEC2Role"
            Description: "IAM instance role/profile for AWS Batch ECS instance(s)"
            Tags: 
              - 
                Key: "ModuleCreatedRole"
                Value: "Yes"
              - 
                Key: "Owner"
                Value: "etl"
              - 
                Key: "Purpose"
                Value: "etl"

    IAMRole2:
        Type: "AWS::IAM::Role"
        Properties:
            Path: "/"
            RoleName: "enc-dec-fargate-ecs-task-exec"
            AssumeRolePolicyDocument: "{\"Version\":\"2012-10-17\",\"Statement\":[{\"Sid\":\"\",\"Effect\":\"Allow\",\"Principal\":{\"Service\":\"ecs-tasks.amazonaws.com\"},\"Action\":\"sts:AssumeRole\"}]}"
            MaxSessionDuration: 3600
            ManagedPolicyArns: 
              - "arn:aws:iam::aws:policy/service-role/AmazonECSTaskExecutionRolePolicy"
              - "arn:aws:iam::aws:policy/AmazonS3FullAccess"

    IAMRole3:
        Type: "AWS::IAM::Role"
        Properties:
            Path: "/batch/"
            RoleName: "enc-dec-fargate-batch-new-20221104232638331400000003"
            AssumeRolePolicyDocument: "{\"Version\":\"2012-10-17\",\"Statement\":[{\"Sid\":\"ECSAssumeRole\",\"Effect\":\"Allow\",\"Principal\":{\"Service\":\"batch.amazonaws.com\"},\"Action\":\"sts:AssumeRole\"}]}"
            MaxSessionDuration: 3600
            ManagedPolicyArns: 
              - "arn:aws:iam::aws:policy/service-role/AWSBatchServiceRole"
            Description: "IAM service role for AWS Batch"
            Tags: 
              - 
                Key: "Owner"
                Value: "etl"
              - 
                Key: "Purpose"
                Value: "etl"
              - 
                Key: "ModuleCreatedRole"
                Value: "Yes"

    IAMRole4:
        Type: "AWS::IAM::Role"
        Properties:
            Path: "/batch/"
            RoleName: "enc-dec-fargate-spot-new-20221104232638321300000002"
            AssumeRolePolicyDocument: "{\"Version\":\"2012-10-17\",\"Statement\":[{\"Sid\":\"ECSAssumeRole\",\"Effect\":\"Allow\",\"Principal\":{\"Service\":\"spotfleet.amazonaws.com\"},\"Action\":\"sts:AssumeRole\"}]}"
            MaxSessionDuration: 3600
            ManagedPolicyArns: 
              - "arn:aws:iam::aws:policy/service-role/AmazonEC2SpotFleetTaggingRole"
            Description: "IAM spot fleet role for AWS Batch"
            Tags: 
              - 
                Key: "Owner"
                Value: "etl"
              - 
                Key: "ModuleCreatedRole"
                Value: "Yes"
              - 
                Key: "Purpose"
                Value: "etl"

    EC2VPC:
        Type: "AWS::EC2::VPC"
        Properties:
            CidrBlock: "10.2.0.0/16"
            EnableDnsSupport: true
            EnableDnsHostnames: true
            InstanceTenancy: "default"
            Tags: 
              - 
                Key: "Account"
                Value: "Test"
              - 
                Key: "Environment"
                Value: "ts"
              - 
                Key: "Name"
                Value: "tstp10vpc01"
              - 
                Key: "Owner"
                Value: "Network"

    EC2SecurityGroup:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "Security group for EFS"
            GroupName: "enc-dec-fargate-efs-sg-20221104233548182600000001"
            Tags: 
              - 
                Key: "Name"
                Value: "enc-dec-fargate-efs-sg"
              - 
                Key: "Owner"
                Value: "etl"
              - 
                Key: "Purpose"
                Value: "etl"
            VpcId: !Ref EC2VPC
            SecurityGroupIngress: 
              - 
                SourceSecurityGroupId: "sg-045214e2d0ee014f0"
                SourceSecurityGroupOwnerId: !Ref AWS::AccountId
                Description: "Container to VPC endpoint service"
                FromPort: 443
                IpProtocol: "tcp"
                ToPort: 443
              - 
                SourceSecurityGroupId: !Ref EC2SecurityGroup2
                SourceSecurityGroupOwnerId: !Ref AWS::AccountId
                Description: "https from service one"
                FromPort: 443
                IpProtocol: "tcp"
                ToPort: 443
              - 
                SourceSecurityGroupId: "sg-045214e2d0ee014f0"
                SourceSecurityGroupOwnerId: !Ref AWS::AccountId
                Description: "EFS (NFS)"
                FromPort: 2049
                IpProtocol: "tcp"
                ToPort: 2049
              - 
                SourceSecurityGroupId: !Ref EC2SecurityGroup2
                SourceSecurityGroupOwnerId: !Ref AWS::AccountId
                Description: "nfs from service one"
                FromPort: 2049
                IpProtocol: "tcp"
                ToPort: 2049
            SecurityGroupEgress: 
              - 
                CidrIp: "0.0.0.0/0"
                Description: "All protocols"
                IpProtocol: "-1"
              - 
                CidrIpv6: "::/0"
                Description: "All protocols"
                IpProtocol: "-1"

    EC2NetworkInterface:
        Type: "AWS::EC2::NetworkInterface"
        Properties:
            Description: !Sub "EFS mount target for ${EFSFileSystem} (fsmt-001210762049bb034)"
            PrivateIpAddress: "10.2.196.84"
            PrivateIpAddresses: 
              - 
                PrivateIpAddress: "10.2.196.84"
                Primary: true
            SubnetId: "subnet-0a7ccdf40ebb72b5e"
            SourceDestCheck: true
            GroupSet: 
              - !Ref EC2SecurityGroup2
              - !Ref EC2SecurityGroup

    EC2NetworkInterface2:
        Type: "AWS::EC2::NetworkInterface"
        Properties:
            Description: !Sub "EFS mount target for ${EFSFileSystem} (fsmt-061aaccd7f12eae88)"
            PrivateIpAddress: "10.2.112.111"
            PrivateIpAddresses: 
              - 
                PrivateIpAddress: "10.2.112.111"
                Primary: true
            SubnetId: "subnet-0f924d5623687fff8"
            SourceDestCheck: true
            GroupSet: 
              - !Ref EC2SecurityGroup2
              - !Ref EC2SecurityGroup

    EC2NetworkInterface3:
        Type: "AWS::EC2::NetworkInterface"
        Properties:
            Description: !Sub "EFS mount target for ${EFSFileSystem} (fsmt-0619a4b9d4734d9e5)"
            PrivateIpAddress: "10.2.28.68"
            PrivateIpAddresses: 
              - 
                PrivateIpAddress: "10.2.28.68"
                Primary: true
            SubnetId: "subnet-033214d4f26fbf6cc"
            SourceDestCheck: true
            GroupSet: 
              - !Ref EC2SecurityGroup2
              - !Ref EC2SecurityGroup

    EC2SecurityGroup2:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "Security group for VPC endpoints"
            GroupName: "enc-dec-fargate-vpc-endpoint-20221104233548184900000002"
            Tags: 
              - 
                Key: "Owner"
                Value: "etl"
              - 
                Key: "Purpose"
                Value: "etl"
              - 
                Key: "Name"
                Value: "enc-dec-fargate-vpc-endpoint"
            VpcId: !Ref EC2VPC
            SecurityGroupEgress: 
              - 
                CidrIp: "0.0.0.0/0"
                Description: "egress ports"
                FromPort: 0
                IpProtocol: "tcp"
                ToPort: 65535

    EC2SecurityGroup3:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "Security Group to allow inbound access to the batch compute environment instances"
            GroupName: "etl-batch-test-2-rBatchComputeSecurityGroup-6ZDKVGM5UC1M"
            Tags: 
              - 
                Key: "Environment"
                Value: "test"
              - 
                Key: "Owner"
                Value: "etl"
              - 
                Key: "Purpose"
                Value: "etl2"
              - 
                Key: "Name"
                Value: "tstp10sg-etl-batch-compute"
            VpcId: !Ref EC2VPC
            SecurityGroupIngress: 
              - 
                CidrIp: !GetAtt EC2VPC.CidrBlock
                FromPort: 1234
                IpProtocol: "tcp"
                ToPort: 1234
            SecurityGroupEgress: 
              - 
                CidrIp: "0.0.0.0/0"
                IpProtocol: "-1"

    IAMInstanceProfile:
        Type: "AWS::IAM::InstanceProfile"
        Properties:
            Path: "/batch/"
            InstanceProfileName: "enc-dec-fargate-ecs-instance-new-20221104232638972900000006"
            Roles: 
              - !Sub "batch/${IAMRole}"

    EC2SecurityGroup4:
        Type: "AWS::EC2::SecurityGroup"
        Properties:
            GroupDescription: "FileSystem Security Group"
            GroupName: "enc-dec-ecs-fargate-sg"
            VpcId: !Ref EC2VPC
            SecurityGroupEgress: 
              - 
                CidrIp: "0.0.0.0/0"
                IpProtocol: "-1"

    EC2NetworkInterface4:
        Type: "AWS::EC2::NetworkInterface"
        Properties:
            Description: "EFS mount target for fs-0704e975ad5085122 (fsmt-002618eef3f1e0c52)"
            PrivateIpAddress: "10.2.112.26"
            PrivateIpAddresses: 
              - 
                PrivateIpAddress: "10.2.112.26"
                Primary: true
            SubnetId: "subnet-0f924d5623687fff8"
            SourceDestCheck: true
            GroupSet: 
              - !Ref EC2SecurityGroup4

    EC2NetworkInterface5:
        Type: "AWS::EC2::NetworkInterface"
        Properties:
            Description: "EFS mount target for fs-0704e975ad5085122 (fsmt-0b72b9d5879288c1b)"
            PrivateIpAddress: "10.2.56.60"
            PrivateIpAddresses: 
              - 
                PrivateIpAddress: "10.2.56.60"
                Primary: true
            SubnetId: "subnet-0b49acce78cf57505"
            SourceDestCheck: true
            GroupSet: 
              - !Ref EC2SecurityGroup4

    LogsLogGroup:
        Type: "AWS::Logs::LogGroup"
        Properties:
            LogGroupName: "/aws/batch/enc-dec-fargate"
            RetentionInDays: 30
